<resources>
    <string name="app_name">One Drive</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">Histories</string>

    <string name="menu_home">One Drive</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_switch">Switch to Driver</string>
    <string name="menu_history">Histories</string>
    <string name="action_switch">Switch to driver</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_maps">Maps</string>
</resources>