<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/switch_to_driver_dark"
            android:title="@string/menu_switch" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signout"
            android:title="@string/action_sign_out" />
    </group>
</menu>