<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_switch"
        android:orderInCategory="100"
        android:title="@string/action_switch"
        android:icon="@drawable/switch_to_driver"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>